feat: config swagger
