# backend/src/swagger/swagger.json
@@ -2,15 +2,46 @@
   "swagger": "2.0",
   "info": {
     "title": "Hospital management system API",
-    "description": "A RMIT Database application assignment",
-    "version": "1.0.0"
+    "version": "v0.0.1",
+    "description": "A RMIT Database application assignment"
   },
   "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "http"
   ],
+  "securityDefinitions": {
+    "authStr": {
+      "type": "apiKey",
+      "name": "x-auth-string",
+      "scheme": "bearer",
+      "in": "header"
+    }
+  },
   "paths": {
+    "/api/auth/publicToken": {
+      "get": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Get all auths",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "schema": {
+              "$ref": "#/definitions/errSchema"
+            },
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/patient/": {
       "get": {
         "tags": [
@@ -254,5 +285,10 @@
         "message"
       ]
     }
-  }
+  },
+  "security": [
+    {
+      "authStr": []
+    }
+  ]
 }
